--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
       </header>
       <main id="settings-box" class="container">
         <div id="player-box">
-          <h2 id="player-text">Joueur 1</h2>
+          <h2>Joueur 1</h2>
           <label for="name">Nom (1 à 8 lettres):</label>
-          <input type="text" id="name" name="name" minlength="1" maxlength="8" size="10" />
+          <input type="text" id="name" name="name" minlength="1" maxlength="8" size="9" />
           <div id="avatar-player"></div>
           <button id="start">Valider</button>
         </div>
