update message welcome page

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <div id="wrapper">
       <header class="container">
         <h2>Une partie de 421 ?</h2>
-        <p>Ce 421 ce joue a deux veuillez choisir un nom et un avatar, pour chaque joueur</p>
+        <p>Ce 421 ce joue a deux: Veuillez choisir un nom et un avatar, pour chaque joueur</p>
       </header>
       <main id="settings-box" class="container">
         <div id="player-box">
